--- a/Lynux/views/layouts/main.handlebars
+++ b/Lynux/views/layouts/main.handlebars
@@ -8,13 +8,14 @@
 
     {{!-- CSS From Bootswatch --}}
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
     {{!-- Font Awesome --}}
     <script src="https://kit.fontawesome.com/f677ed40fa.js"></script>
 
 </head>
 <body>
-    
+
     <div class="container">
         {{{body}}}
     </div>
