--- a/Lynux/views/map.hbs
+++ b/Lynux/views/map.hbs
@@ -1,1 +1,28 @@
+<link rel ="stylesheet" type = "text/css" href = "/css/style.css"/>
+<link href="https://fonts.googleapis.com/css?family=Lacquer|Red+Hat+Display&display=swap"
+    rel="stylesheet">
+
+
 {{>navbar}}
+<div class="philippine-map_container">
+    
+    <div class="philippine-map_view">
+      <img draggable="false" src="images/philippine-map-super-large.svg">
+
+      <div class="philippine_rah">
+        <img draggable="false" src="images/eow.png" />
+      </div>
+    </div>
+
+    <div class="philippine-location_info">
+      <div class="location_row location_row_close">
+        <div class="location_close">
+          ×
+        </div>
+      </div>
+      <div class="location_info_container">
+      </div>
+    </div>
+  </div>
+
+  <script src="/scripts/map.js"></script>
