--- a/Lynux/views/dashboard.hbs
+++ b/Lynux/views/dashboard.hbs
@@ -34,14 +34,39 @@
             <div class="col-md-auto">
         </div>
         <div class="col col-lg-2 my-auto center-block text-center justify-content-center">
-            <button class="btn btn-secondary my-2 my-sm-0">Add a story</button>
+            <button class="btn btn-secondary my-2 my-sm-0" data-toggle="modal" data-target="#myModal">Add a story</button>
         </div>
     </div>
 
    
       
 
-{{!-- Add a story --}}
+{{!-- Add a story modal --}}
+
+    <div class="modal" tabindex="-1" role="dialog" id="myModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Post your story</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form class="form-group" action="/story-add" method="POST">
+                    <input class="form-control" type="text" id="titile" placeholder="Title">
+                    <textarea class="form-control" id="story" rows="6"></textarea>
+                    {{!-- <input type="submit" value="add"> --}}
+                
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Post</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+                </form>
+            </div>
+        </div>
+    </div>
     
 
       <!-- Project One -->
@@ -138,3 +163,7 @@
         </li>
       </ul>
       </div>
+
+<script>
+
+</script>
