--- a/Lynux/views/add.hbs
+++ b/Lynux/views/add.hbs
@@ -12,7 +12,7 @@
   </div>
 
   <label for="locationStory">Location of story</label>
-  <input class="form-control" type="text" id="locationStory" placeholder="location here" readonly>
+  <input class="form-control" type="text" id="locationStory" placeholder="{{location}}" readonly>
   <br>
 
   <div class="form-group">
@@ -28,7 +28,7 @@
     </div>
     
     <br>
-  <button type="submit" class="btn btn-primary">Submit</button> <button  class="btn btn-primary">Cancel</button>
+  <button type="submit" class="btn btn-primary">Submit</button> <a  href="/"class="btn btn-primary">Cancel</a>
 </form>
 
 </div>
