--- a/Lynux/views/partials/navbarG.hbs
+++ b/Lynux/views/partials/navbarG.hbs
@@ -16,7 +16,7 @@
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 
         {{!-- Logout --}}
-        <a href="/users/logout" class="btn btn-primary ml-2 my-3 my-sm-0">Logout</a>
+        <a href="/users/welcome" class="btn btn-primary ml-2 my-3 my-sm-0">Login</a>
       </form>
 
     </div>
