--- a/Lynux/views/map.hbs
+++ b/Lynux/views/map.hbs
@@ -1,9 +1,18 @@
+
+
+
 {{#if user}}
     {{>navbar}}
+    <script>
+      var posts = {{{json posts}}}
+    </script>
     <script src="../scripts/map.js"></script>
   {{else}}
     {{>navbarG}}
-    <script src="../scripts/mapG.js"></script>
+    <script>
+      var posts = {{{json posts}}}
+    </script>
+    <script type="text/javascript" src="../scripts/mapG.js"></script>
 {{/if}}
 
 <div>
@@ -17,6 +26,20 @@
 {{/each}}
 
 </div>
+
+
+{{#each posts}}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      {{this.title}}
+      
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+{{/each}}
+
+
+
 
 
 
