--- a/Lynux/views/map.hbs
+++ b/Lynux/views/map.hbs
@@ -31,7 +31,7 @@
 {{#each posts}}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       {{this.title}}
-      
+
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -46,6 +46,10 @@
 {{!-- For adding a post --}}
 <form id="addForm" action="add">
     <input type="hidden" name="latlong" id="latlong">
+</form>
+
+<form id="viewPost" action="view">
+  <input type="hidden" name="post_id" id="post_id">
 </form>
 
 
