--- a/Lynux/views/add.hbs
+++ b/Lynux/views/add.hbs
@@ -1,4 +1,8 @@
-{{>navbar}}
+{{#if user}}
+    {{>navbar}}
+  {{else}}
+    {{>navbarG}}
+{{/if}}
 
 <div class="container">
   <form class="needs-validation" action="addStory" method="POST" novalidate>
@@ -24,7 +28,7 @@
     </div>
     <div class="form-group">
       <label for="importFile">Add a picture</label>
-      <input type="file" name="picture" class="form-control-file" id="importFile">
+      <input type="file" accept="image/*" name="picture" class="form-control-file" id="importFile">
     </div>
     
     <br>
