--- a/Lynux/views/map.hbs
+++ b/Lynux/views/map.hbs
@@ -1,6 +1,3 @@
-
-
-
 {{#if user}}
     {{>navbar}}
     <script>
@@ -27,7 +24,7 @@
 
 </div>
 
-
+{{!-- 
 {{#each posts}}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       {{this.title}}
@@ -36,7 +33,7 @@
       <span aria-hidden="true">&times;</span>
     </button>
     </div>
-{{/each}}
+{{/each}} --}}
 
 
 
