--- a/Lynux/views/partials/navbar.hbs
+++ b/Lynux/views/partials/navbar.hbs
@@ -9,10 +9,10 @@
       
     </ul>
     <div class="left">
-      <form class="form-inline my-2 my-lg-0">
+      <form class="form-inline my-2 my-lg-0" action="search" method="GET">
 
         {{!-- Search --}}
-        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+        <input class="form-control mr-sm-2" name="search" type="text" placeholder="Search">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 
         {{!-- Logout --}}
