--- a/Lynux/views/partials/navbarG.hbs
+++ b/Lynux/views/partials/navbarG.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#"><i class="fas fa-ghost"></i> Ghost Payter</a>
+  <a class="navbar-brand" href="/"><i class="fas fa-ghost"></i> Ghost Payter</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,10 +9,10 @@
       
     </ul>
     <div class="left">
-      <form class="form-inline my-2 my-lg-0">
+      <form class="form-inline my-2 my-lg-0" action="search" method="GET">
 
         {{!-- Search --}}
-        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+        <input class="form-control mr-sm-2" name="search" type="text" placeholder="Search">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 
         {{!-- Logout --}}
